# kyc

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
src/kyc_backend/: Cargo.toml
src/kyc_backend/src/: lib.rs
src/kyc_frontend/: package.json
src/kyc_frontend/src/: App.js
